=======
HISTORY
=======

1.2.2 (unreleased)
------------------

- Tweak ploneimage.js to use post data for setDescription for compatibility
  with latest zopes. (This makes the image dialogue incompatible with IE6.)
  [elro]

- Fix quoting of description ploneimage.js
  [elro]

- Make setDescription convert to unicode.
  [elro]

1.2.1 (2011-02-10)
------------------

- Be explicit about catching exceptions. Bare excepts are asking for trouble
  in Zopeland folks.
  [elro]

- Do not crash when getting a configuration with styles that have an
  empty line at the end.
  [maurits]

- Handle Missing.Value for uid in JSONFolderListing.
  [elro]

- Set text/css content type on tinymce-getstyle.
  [elro]

- Add option 'auto' for directivity. The directivity will be set depending 
  on the content or the portals default language.
  Fixes http://dev.plone.org/plone/ticket/10039
  [csenger]

- Make the spellchecker to be used configurable via the control panel utility.
  [jcbrand]

- Added the 'After the deadline' spelling and grammar checker plugin.
  [jcbrand]

1.2.0 (2011-01-04)
------------------

- Always use an image's description as its caption, and make the image dialog
  edit the description field instead of the image's alt text. This provides
  parity with how captions were handled by kupu, and avoids misusing the alt
  text.
  [davisagli]

- When editing an image, correctly highlight it in the image dialog even if
  the link-by-uid setting changed since the image was added. This fixes
  http://dev.plone.org/plone/ticket/10970.
  [davisagli]

- Remove the resolveuid Python script; a browser view with the same name in
  plone.outputfilters is now used instead to resolve UUIDs.
  [davisagli]

- Deprecated various helpers in plone.outputfilters.setuphandlers since they
  now duplicate functions in plone.outputfilters.
  [davisagli]

- Use the resolveuid and captioning transforms from plone.outputfilters